# self_balancing_bike

./: README.md
bike-cad-files/: Bike_Frame.SLDPRT  Bike_Handle.SLDPRT  Bike_Support.SLDPRT  Front_Fork.SLDPRT  Front_Wheel.SLDPRT  Front_Wheel_Axle.SLDPRT  Handle_Axis.SLDPRT  IMU_Link.SLDPRT  RW_Motor_Model.SLDPRT  RW_Motor_Shaft.SLDPRT  Reaction_Wheel.SLDPRT  Rear-Wheel-Axle.SLDPRT  Rear_Wheel.SLDPRT  self_balancing_bike_assembly.SLDASM
bike-cad-files/self_balancing_bike/: CMakeLists.txt  package.xml
bike-cad-files/self_balancing_bike/config/: joint_names_self_balancing_bike.yaml
bike-cad-files/self_balancing_bike/launch/: display.launch  gazebo.launch
bike-cad-files/self_balancing_bike/meshes/: base_link.STL  imu_link.STL  rw_motor_link.STL
bike-cad-files/self_balancing_bike/urdf/: self_balancing_bike.csv  self_balancing_bike.urdf
config/: joint_actuators.yaml
launch/: empty_world_urdf.launch  rviz.launch  rviz_urdf.launch
meshes/: rear_wheel_link.STL  rw_link.STL
rviz/: sensor_actuators.rviz
scripts/: IMU_data.csv  MOI_bike.py  Python File 2.py  balance.py  control.py
self_balancing_bike/: CMakeLists.txt  package.xml
self_balancing_bike/launch/: empty_world.launch  empty_world_urdf.launch  set_controllers.launch  set_controllers_urdf.launch  small_city.launch  small_city_urdf.launch
self_balancing_bike/meshes/: front_wheel_link.STL  handle_link.STL
self_balancing_bike/scripts/: Python File 3.py  Python File.py  try_balance.py
self_balancing_bike/urdf/: backup.urdf  bike.urdf
urdf/: BIKE.csv
xacro/: bike.sensors.xacro
(+4 files in other folders)
