<package format="2">
  <name>self_balancing_bike</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for self_balancing_bike</p>
    <p>This package contains configuration data, 3D models and launch files
for self_balancing_bike robot</p>
  </description>
  <author>Mohit Kumar Gautam</author>
  <maintainer email="mkgautam31102002@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>